# devops-cicd-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.ci.yml  pyproject.toml  sonar-project.properties
app/: main.py  routes.py
ci/: jenkins.Dockerfile
deploy/ansible/: ansible.cfg  site.yml
deploy/ansible/files/: grafana-dashboard.json
deploy/ansible/templates/: deployment.yaml.j2  ingress.yaml.j2  service.yaml.j2  servicemonitor.yaml.j2
infra/terraform/: .terraform.lock.hcl  main.tf  monitoring.tf  outputs.tf  variables.tf  versions.tf
tests/: test_app.py
